--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>LISTA DE ETIQUETAS HTML</h1>
+    <ul>
+        <li>(p).- Para agregar un parrafo</li>
+        <li>(h1).-Para agregar un titulo</li>
+        <li>(h2).- Para agregar un subtitulo</li>
+        <li>(img).- Para agregar una imagen</li>
+    </ul>
 </body>
 </html>
