--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
         <li>(h2).- Para agregar un subtitulo</li>
         <li>(img).- Para agregar una imagen</li>
     </ul>
+    <ol>
+        <li>git add . (para añadir cambios)</li>
+        <li>git commit -m "CUALQUIER COSA" (para guardar cambios)</li>
+        <li>git push (para subir cambios)</li>
+    </ol>
 </body>
 </html>
