tu ele amigo del fafa

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
         <li>git commit -m "CUALQUIER COSA" (para guardar cambios)</li>
         <li>git push (para subir cambios)</li>
     </ol>
+    <h2>IMAGENES</h2>
+    <img src="Imagenes/Imagen 1.jpg" width="1000px">
 </body>
 </html>
