--- a/index.html
+++ b/index.html
@@ -20,5 +20,114 @@
     </ol>
     <h2>IMAGENES</h2>
     <img src="Imagenes/Imagen 1.jpg" width="1000px">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/5vOp4Es5LZo?si=7xjIAvDrozbK_KGC"
+     title="YouTube video player" frameborder="0" 
+     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+    </iframe>
+    <p>
+        Not to be confused with the Skeleton, an enemy found underground, or Skeletron Prime, the Hardmode version of Skeletron.
+Skeletron is a pre-Hardmode boss. It must be defeated prior to entering the Dungeon, and defeating it grants unlimited access to all Dungeon areas for all players.
+ It also causes the Clothier NPC to spawn, as long as a vacant house is available.
+
+If attempting to enter the Dungeon before killing Skeletron, Dungeon Guardians spawn once a player reaches 0 depth.
+These enemies generally kill any player with a single hit, dealing 1000 / 2000 / 3000 damage.
+ Managing to defeat a Dungeon Guardian does not grant access to the Dungeon, thus defeating Skeletron is mandatory for (safely) entering the Dungeon.
+While Skeletron is alive, the music Boss 1 will play. When Otherworldly music  is enabled, the track Boss 1 (Otherworldly) will play instead.
+    </p>
+<a></a>
+
+    <table border="1" align="center">
+<tr>
+    <th>Datos</th>
+    <th>Detalle</th>
+</tr>
+<tr>
+    <td><table border="1" align="center">
+        <tr bgcolor="gray">
+            <th>Empresa</th>
+            <th width="200" align="center">Detalle</th>
+            <th colspan="2">Costo</th>
+        </tr>
+        <tr>
+        <td>Entel</td>
+        <td width="200" align="center">Tarjeta</td>
+        <td>10 bs.</td>
+        <td>Bs.</td>
+        </tr>
+        <tr>
+        <td>Sabrosa</td>
+        <td width="200" align="center">fideo</td>
+        <td>7 Bs.</td><td>Bs.</td>
+        </tr>
+        <tr>
+            <td>Coca Cola</td>
+            <td width="200" align="center">Bebida</td>
+            <td>14 Bs.</td><td>Bs.</td>
+        </tr>
+        <thead><tr>
+            <td>PIL</td>
+            <td width="200" align="center">Yogurt</td>
+            <td>12 Bs.</td><td>Bs.</td>
+        </tr></thead>
+        
+        
+            </table></td>
+</tr>
+    </table>
+    <table border="1" align="center">
+        <thead>
+            <tr>
+                <th>Detalle</th>
+                <th>Carnet</th>
+                <th>Nombre</th>
+                <th>Costo</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Air Jordan</td>
+                <td>154121</td>
+                <td>bizarrap</td>
+                <td>700 Bs.</td>
+            </tr>
+            <tr>
+                <td>Air Jordan</td>
+                <td>154121</td>
+                <td>bizarrap</td>
+                <td>700 Bs.</td>
+            </tr>
+            <tr>
+                <td>Air Jordan</td>
+                <td>154121</td>
+                <td>bizarrap</td>
+                <td>700 Bs.</td>
+            </tr>
+            <tr>
+                <td>Air Jordan</td>
+                <td>154121</td>
+                <td>bizarrap</td>
+                <td>700 Bs.</td>
+            </tr>
+            <tr>
+                <td>Air Jordan</td>
+                <td>154121</td>
+                <td>bizarrap</td>
+                <td>700 Bs.</td>
+            </tr>
+            <tr>
+                <td>Air Jordan</td>
+                <td>154121</td>
+                <td>bizarrap</td>
+                <td>700 Bs.</td>
+            </tr>
+            <tr>
+                <td>Air Jordan</td>
+                <td>154121</td>
+                <td>bizarrap</td>
+                <td>700 Bs.</td>
+            </tr>
+        </tbody>
+    </table>
+
 </body>
 </html>
