--- a/index.html
+++ b/index.html
@@ -128,6 +128,31 @@ While Skeletron is alive, the music Boss 1 will play. When Otherworldly music  i
             </tr>
         </tbody>
     </table>
+    <form action="https://terraria.fandom.com/es/wiki/Wiki_Terraria" method="post">
+    <label>Nombre</label><br>
+    <input type="text" placeholder="Ingresa tu nombre"><br>
+    <label>Apellido</label><br>
+    <input type="text" placeholder="Ingresa tu apellido"><br>
+    <label>Ciudad</label> <br>
+    <select>
+        <option>Cochabamba</optionn>
+        <option value="La Paz">La Paz</optionn>
+        <option value="Santa Cruz">Santa Cruz</optionn>
+        <option value="Beni">Beni</optionn>
+        <option value="Chuquisaca">Chuquisaca</optionn>
+        <option value="Potosí">Potosí</optionn>
+        <option value="Tarija">Tarija</optionn>
+        <option value="Pando">Pando</optionn>
+        <option value="Oruro">Oruro</optionn>
+    </select><br>
+    <label>Cantidad</label><br>
+    <input type="number"><br>
+    <label>Contraseña</label><br>
+    <input type="password"><br>
+    <label>Detalle</label><br>
+    <textarea></textarea>
+    <input type="submit" value="Guardar">
+</form>
 
 </body>
 </html>
